# clasp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
cckit/: __init__.py
cckit/agents/: __init__.py  base.py  code.py  conversation.py  custom.py  research.py
cckit/core/: __init__.py  cli.py  command.py  config.py  models.py  process.py
cckit/mcp/: __init__.py  manager.py  server.py
cckit/rpc/: __init__.py  client.py
cckit/session/: __init__.py  acp_session.py  manager.py  session.py
cckit/streaming/: __init__.py  parser.py
cckit/types/: __init__.py  enums.py  messages.py
cckit/utils/: __init__.py  errors.py
claude_agent/: __init__.py
claude_agent/agents/: base.py  code.py  conversation.py  custom.py  research.py
claude_agent/core/: __init__.py  cli.py  config.py
claude_agent/mcp/: __init__.py  manager.py
claude_agent/rpc/: client.py  handlers.py  protocol.py  transport.py
docs/: acp-implementation-plan.md  api-reference.md  concepts.md  custom-tools.md  getting-started.md  guides.md  security-report.md
examples/: basic_usage.py  custom_agent.py  mcp_custom_tool.py  mcp_integration.py  multi_turn_conversation.py  openai_server.py  openapi.yml  streaming_example.py
reports/: code-review-2026-04-18-rpc-acp.md  security-review-acp-rpc.md
tests/: functional_test_acp.py  test_acp_client.py  test_acp_functional.py  test_acp_parser.py  test_acp_session.py  test_agents.py  test_cli.py  test_mcp.py  test_models.py  test_openai_server.py  test_process.py  test_rpc_protocol.py  test_rpc_transport.py  test_session.py  test_streaming.py
(+21 files in other folders)
